# Dex_perp_bot

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: .env.example  main.py
src/dex_perp_bot/: __init__.py  backtester.py  config.py  funding.py  main.py  market_data.py  notifier.py  order_tests.py  risk.py  strategy.py  trade_log.py
src/dex_perp_bot/exchanges/: aster.py  base.py  hyperliquid.py
tests/: conftest.py  test.py  test_aster_client.py  test_config.py  test_funding.py  test_hyperliquid_client.py
